Add lectures 6 and 7 for CS224n

--- a/content/notes/CS224n.md
+++ b/content/notes/CS224n.md
@@ -32,6 +32,7 @@ enableToc: true
 	- This is used to create word vectors/embeddings:
 		- We build up *dense* vectors for each word in an embedding space such that in this space, words that have similar meaning appear close to each other in this space.
 - This is the motivation behind **word2vec**
+> "You shall know a word by the company it keeps" - J.R. Firth
 ### word2vec Overview
 - You are give a large corpus of text (i.e. all wikipedia pages)
 - You will have every word in a fixed vocabulary $w$ represented by a vector $v_w$.
@@ -415,4 +416,237 @@ $$ output = \frac{input - \mu}{\sigma - \epsilon} * \gamma + \beta $$
 	- Let $s_1, s_2, \dots, s_n$ be the hidden states of the decoder.
 	- The keys and values are $k_i = Kh_i$ and $v_i = Vh_i$.
 	- The queries are $q_i = Qs_i$.
+
+# Lecture 6: Pretraining
+## Subword Models
+- Current assumption is that we have a fixed vocabulary of words and finite vocabulary.
+- For words such as hat and tasty, you will have an embedding for each word.
+- However, there can be variations of words (e.g. a typo (tsaty), a new word (tastylicious), etc.). With fixed vocabulary, there will be no mapping for these words, but you should have all the data you need to learn representations for these words.
+- Current fix is to just map to an unknown token, but this is not ideal.
+- Many languages have complex morphologies, which would require a very large vocabulary to cover all possible words.
+### Byte Pair Encoding
+- Learn vocabulary of subword units/parts of words
+- Byte Pair Encoding (BPE) is a simple algorithm that learns the vocabulary of subword units.
+	1. Initialize vocabulary with all characters in the training data and special end-of-word token.
+	2. Using corpus of text, find the most frequent pair of characters and add them as a single unit into the vocabulary.
+	3. Repeat step 2 until you reach a certain vocabulary size.
+- Example: taaaaasty $\rightarrow$ taa\#\# aaa\#\# sty.
+	- \#\# means that we haven't reached the end of the word yet.
+- All subwords tokens are processed identically, so there is no distinction between subwords and words.
+- Long words could be broken down into many subwords if it doesnt appear often in the corpus.
+
+## Pretraining
+
+> "the complete meaning of a word is always contextual, and no study of meaning apart from a complete context can be taken seriously." - Firth (1935)
+
+### What we had before: Pretrained Word Embeddings
+- Around 2017:
+	- Pretrained word embeddings were the standard (e.g. word2vec, GloVe, etc.)
+	- Incorporate LSTM or Transformer on top of the pretrained word embeddings.
+- Some issues:
+	- downstream tasks will require context-specific word embeddings. (e.g question answering)
+### What we want: Pretrained Whole Models
+- Have all parameters in NLP models to be initialized via pretraining
+- Pretraining methods hide parts of the input from the model and ask it to predict the missing parts.
+- This allows:
+	- Strong initialization of parameters
+	- Strong representation of language.
+- What can we learn from reconstructing the input?
+	- Syntax ("I put ____ fork down on the table")
+	- Semantics ("I went to the ocean to see seals, fish, _____")
+	- Pragmatics
+	- World Knowledge ("Stanford University is located in _______, California")
+	- Discourse
+	- etc.
+
+### Pretraining with Language Modeling
+- Model $p_\theta(w_t | w_{1:t-1})$ by maximizing the log-likelihood of the training data.
+- Save the network parameters $\theta$.
+- Lots of data for this (in English at least)
+
+### Pretraining and Finetuning Paradigm
+- Pretrain a model on a large corpus of data to learn from lots of text general things. Serves as initialization.
+- Finetuning on your specific task. Not as much data, but you adapt to your task. Loss converges much faster. Have to format your finetuning data to match format and task of pretraining data.
+
+### Pretraining Methods
+#### Encoders
+- get bidirectional context to learn representations of words
+- Can't do language modeling with bidirectional context.
+- Because of this, we use masked language modeling.
+#### Masked Language Modeling
+- Replace some fraction of the input tokens with a special mask token.
+- Predict the original value of the masked tokens.
+- Similar to language modeling, but you have to predict the masked tokens instead of the next word.
+- For loss, only compute loss on the masked tokens.
+- Example: "I went to the [MASK] and bought a [MASK] of milk."
+	- Masked tokens are "store" and "gallon".
+	- Predictions are "store" and "gallon".
+	- Loss is only computed on "store" and "gallon".
+- Used for BERT.
+	- Mask out 15% of the tokens.
+	- 80% of the time, replace the masked token with the mask token. (This is to prevent the model from just learning to predict the masked token)
+	- 10% of the time, replace the masked token with a random token.
+	- 10% of the time, keep the masked token the same.
+	- This is to make sure model doesn't just learn to predict the masked token, and it builds strong representations of all words
+#### Next Sentence Prediction
+- Given two sentences, predict whether the second sentence is the next sentence of the first sentence.
+- This would teach network long range dependencies and long distance coherence.
+- Used for BERT.
+- Later found that this is not necessary for good performance.
+
+> The main idea is, we are coming up with hard problems for models to solve that require the model to learn a lot of things about language.
+
+*On a bunch of NLP tasks, where models were meticulously built with special architectures and features, BERT outperformed them all in all tasks*.
+
+#### Limitations of Pretraining Encoders
+- Pretraining encoders is not enough for some tasks.
+- You cannot use encoders for tasks that require generation (e.g. Summary Generation, Machine Translation, etc.)
+- It is good for classification tasks, but not for generation tasks.
+
+#### Lightweight Fine-Tuning vs Full Fine-Tuning
+- You can finetune entire models, or you can freeze some of the layers and only finetune the top layers.
+- Prefix Tuning:
+	- Freezes all layers, adds a prefix of parameters, and learn the prefix parameters.
+- Low Rank Adaptation (LoRA):
+	- Learn a low rank matrix "diff" between the pretrained model and the finetuned model.
+![lora](/notes/images/lora.png)
+
+#### Encoder-Decoder Pretraining
+- You could do language model pretraining by splitting text into two parts and predicting the second part given the first part.
+- The most optimal way to pretrain is using Span Corruption (T5) model.
+	- Take a text, mask out different spans of text and predict the masked spans.
+![span_corruption](/notes/images/span_corruption.png)
+- Was very good at question answering, it was a lot better at retrieving knowledge from its pretrained knowledge base (T5)
+
+#### Decoders
+- Normal language models
+- Predict next word given previous words
+- You add a linear layer at the end if you want to perform classification that needs to be trained from scratch.
+- Majority of new models are decoders because of their simplicity and flexibility.
+- Example is GPT family of  models.
+- When we got to GPT-3, it was a much larger model, and it could learn some tasks zero or few shot. (in context learning)
+
+### Scaling Efficiency
+- Cost of training Large Language Models is very high.
+- Cost is related to number of parameters and number of tokents trained on. What is the best balance between the two?
+
+# Lecture 7: Prompting and Reinforcement Learning from Human Feedback
+## Effects of Larger Models
+- We are training larger and larger models with tons of more data
+- With pretraining with tons of data, you will learn a lot about a lot of things (e.g. syntax, semantics, pragmatics, etc.)
+- Pretraining these large models on so much raw text data leads them to be rudimentary "world" models able to model beliefs and actions.
+- Models are also exposed to lots of other data such as math, code, and encyclopedic knowledge that allows them to learn about the world and do things.
+- Potential of this is using LLMs to act as assistants to humans.
+
+## Zero Shot Learning and Few Shot Learning
+### Emergent Abilities of GPTs
+- The original GPT in 2018 showed that pretraining by language model training on a corpus of books is effective for other downstream tasks like natural language inference (117M Parameters).
+- GPT-2 was same architecture as GPT but lot more data and larger model. Trained on internet text data. (1.5B Parameters)
+	- Key takeaway: Language Models are Unsupervised multitask learners, which means they can do zero shot learning.
+	- Emergent Zero Shot Learning:
+		- Model can do many tasks without any finetuning or any examples. You would simply:
+			- Specify the right sequence prediction problem.
+				- e.g. Question Answering "Passage: Tom Brady ... Question: Where was Tom Brady born? Answer:"
+			- Classifiction tasks: Compare different probabilities of different sequences.
+				- "The cat could not fit into the hat because it was too big". Does "it" refer to the cat or the hat?
+				- You compare P(... because the hat was too big) and P(... because the cat was too big).
+		- GPT-2 was able to outperform SOTA on many tasks without any finetuning.
+		- Interesting Zero-Shot behavior if you are creative enough to come up with the right prompt.
+			- e.g. Summarization: Append "TL;DR:" to the end of the text to prompt the model to summarize it.
+- GPT-3 was same architecture but even larger and even more parameters (175B Parameters)
+	- Key takeaway: Language Models are few shot learners.
+	- Specify a task by giving a few examples before your actual prompt, and then you ask model to complete the task.
+	- There is a 10% accuracy increase just by adding one example to the prompt.
+	- *Few shot learning is an emergent property of scale*
+	- As you increase the number of parameters, you get better and better few shot learning.
+	- Limitations:
+		- Some tasks are hard to learn even with examples: e.g. Addition.
+		- Mainly tasks that involve multiple steps of reasoning that even humans struggle with.
+	- Chain of Thought Prompting:
+		- You add reasoning to your prompt to help the model learn how to do the task.
+		![chain of thought](/notes/images/chain.png)
+		- Allows for math problems to be easier.
+		- *basically providing how the model should think about the problem*
+	- Zero-Shot Chain of Thought:
+		- Instead of adding examples of reasoning to help the model, simply ask the model to reason through the problem.
+		- Performs worse than manual chain of thought, but you still get great performance.
+		- Best prompt is "Lets work this out in a step by step way to make sure we have the right answer".
+- Prompt Engineering
+	- Can allow you to "jailbreak" models to make the models output stuff in a way that you want.
+- With prompt engineering, you are limited by the sequence length and complex tasks
+
+## Instruction Finetuning
+- Language models != assisting users
+- The task given to language models is to predict the next word, which is not always aligned with user intent.
+- How to align language model with user intent?
+	- Collect human generated outputs for many tasks for different instructions, and then finetune the model on these instructions.
+- Scale and amount and variation of data is important for this.
+- This is still somewhat finetuning.
+- Instruction finetuning worked for the T5 model
+- Very simple to do and generalizes for many tasks.
+- It is hard to get human labels to the scale that is needed. Also, humans may disagree on what the correct output is.
+- Language models penalize all token mistakes equally, but some errors are worse than others.
+	- "Avatar is an adventure TV show" and "Avatar is a fantasy musical" are both wrong because Avatar is fantasy more than adventure, and it is a TV show not a musical, but the musical is a far worse error than calling it an adventure show, but the model doesn't know that
+
+## Reinforcement Learning from Human Feedback
+- Imagine training a LM on summarization:
+	- For each LM sample $s$, imagine a way to obtain a human reward $R(s) \in \mathbb{R}$, where higher is better.
+	- Have a human rate all summaries, where higher is good, lower is bad
+	- We want to maximize the expected reward of our LM samples:
+		- $\mathbb{E}_{\hat{s} \sim p(s)}[R(\hat{s})]$
+		- As we take samples from our LM, we want the samples to maximize the expected reward.
+- Using Reinforcement Learning (RL)
+	- Emergence of using RL with LMs
+	- Newer RL algorithms make it possible to integrate RL with LLMs
+- How to update our parameters $\theta$ to optimize for human preference:
+	- $\mathbb{E}_{\hat{s} \sim p(s)}[R(\hat{s})]$
+	- Since we maximize the above formula, try to use gradient ascent to maximize it.
+	- $\theta_{t+1} := \theta_t + \alpha \nabla_{\theta_t} \mathbb{E}_{\hat{s} \sim p(s)}[R(\hat{s})]$
+		- How do we estimate the expectation, and what if the reward function is not differentiable?
+	- We use *policy gradient* methods in RL to give us tools to perform the gradient ascent.
+		- $\nabla_{\theta} \mathbb{E}_{\hat{s} \sim p(s)}[R(\hat{s})] = \nabla_{\theta_t} \sum_{s}R(s)p_{\theta}(s) = \sum_{s}R(s)\nabla_{\theta_t}p_{\theta}(s)$
+		- Using log-derived trick to take derivative of $\log p_{\theta}(s)$, we get:
+			- $\nabla_{\theta_t}\log p_{\theta}(s) = \frac{\nabla_{\theta_t}p_{\theta}(s)}{p_{\theta}(s)}$
+			- $\nabla_{\theta_t}p_{\theta}(s) = p_{\theta}(s)\nabla_{\theta_t}\log p_{\theta}(s)$
+		- We can now rewrite the gradient as:
+			- $\nabla_{\theta} \mathbb{E}_{\hat{s} \sim p(s)}[R(\hat{s})] = \sum_{s}p_{\theta}(s)R(s)\nabla_{\theta_t}\log p_{\theta}(s)$ 
+		- We see that the right-hand side is an expectation, so we can rewrite it as:
+			- $\mathbb{E}_{\hat{s} \sim p_{\theta}(s)}[R(\hat{s})\nabla_{\theta_t}\log p_{\theta}(s)]$
+		- The gradient is now inside the expectation, which means we can approximate it using Monte Carlo sampling.
+			- $\nabla_{\theta} \mathbb{E}_{\hat{s} \sim p(s)}[R(\hat{s})] \approx \frac{1}{N}\sum_{i=1}^N R(\hat{s}_i)\nabla_{\theta_t}\log p_{\theta}(\hat{s}_i)$
+		- We then get the following update rule:
+			- $\theta_{t+1} := \theta_t + \alpha \frac{1}{N}\sum_{i=1}^N R(\hat{s}_i)\nabla_{\theta_t}\log p_{\theta}(\hat{s}_i)$
+		- What does this mean:
+			- Simple case:
+				- Imagine reward was binary reward (0 or 1).
+				- When we get a reward of 1, we are performing normal gradient ascent, but when we get a reward of 0, we do nothing (?)
+			- More generally, if reward was scalar:
+				- When R is very high, we multiply the gradient by a large number, so we take a large step in the direction of the gradient.
+				- If R is low and negative, we multiply the gradient by a negative number, so we take a large step in the opposite direction of the gradient to decrease the probability of the sample.
+- Limitations:
+	- Again, expensive and not scalable to get humans to rate all samples.
+		- Solution: Train another NLP model that will model human preferences and spit out a reward for each sample.
+	- Human preferences can be noisy and miscalibrated.
+		- Solution: ask humans to compare two samples and tell you which one is better, which makes it more reliable. 
+		- The NLP model that models human preferences will also be trained on these pairwise comparisons.
+- Putitng it all together:
+	- We have a pretrained LLM that may also be instruction finetuned $p^{PT}(s)$.
+	- We have a reward model $RM_{\phi}(s)$ producing scalar rewards for LLM outputs trained on human preferences dataset
+	- We have a method to optimize LLM parameters towards a reward function.
+	- To do RLHF:
+		- Clone pretrained model $p^{PT}(s)$ to get $p_{\theta}^{RL}(s)$.
+		- Optimize the following reward using RL:
+			- $R(s) = RM_{\phi}(s) - \beta\log\frac{p_{\theta}^{RL}(s)}{p^{PT}(s)}$
+			- The second term is a penalty to make sure we do not stray too far from the pretrained model. (KL Divergence)
+			- $\beta$ is a hyperparameter that controls how much we want to penalize the model for straying too far from the pretrained model.
+- InstructGPT:
+	- Scale up RLHF to tens of thousands of tasks
+- Using RLHF helps align the model more with human preferences instead of just focusing on the next word prediction task.
+- It is hard to get right using RL.
+- Human Preferences are unreliable:
+	- Chatbots are rewarded to produce responses that seem authoritative and helpful, whether or not the information is actually true or not
+	> It is naive to think that all of human preferences for a task can be captured by a single scalar reward function.
+- RLHF being the main driver in aligning models with human preferences can have issues because of the unreliability of human preferences and reward hacking.
+
+		
 
